--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -1,55 +1,34 @@
-.message {
-	display:block;
-	opacity:0.96;
-	position:absolute;
-	border:2px solid;
-	padding:5px 50px;
-	font-weigth:bold;
-	border-bottom-left-radius:5px;
-	border-bottom-right-radius:5px;
-}
-.message:before {
-	margin: 0 0.5em 0 0;
-}
-
-.info-icon{color:#00529B;background-color:#BDE5F8;}
-.success-icon{color:#4F8A10;background-color:#DFF2BF;}
-.success-icon:before{content:"\2714";}
-.warning-icon{color:#9F6000;background-color:#FEEFB3;}
-.warning-icon:before{content:"\26A0";}
-.error-icon{color:#D8000C;background-color:#FFBABA;}
-.error-icon:before{content:"\2718";}
+/* alerts icons */
+.success-icon:before{margin:0 10px 0 10px;content:"\2714";}
+.warning-icon:before{margin:0 10px 0 10px;content:"\26A0";}
+.error-icon:before{margin:0 10px 0 10px;content:"\2718";}
 
 /* multiselect field */
 a.multiSelect, a.multiSelect:link {
-	vertical-align: middle;
-	line-height: 1.1em;
-	width: 100%;
-	padding: 7px;
-	border-style: solid;
-	border-width: 1px;
-	box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-ms-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	border-color: #C6C6C6 #DADADA #EAEAEA;
-	color:#555;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
-	border-radius: 4px;
-	display:block;
+	background-color: white;
+	border: 1px solid #CCC;
+	display: inline-block;
+	height: 20px;
+	padding: 4px 6px;
+	margin-bottom: 9px;
+	font-size: 14px;
+	line-height: 20px;
+	color: #555;
+	border-radius: 3px;
 	text-decoration: none;
-	
+	width: 100%;	
 }
 
 a.multiSelect:visited, a.multiSelect:hover, a.multiSelect:active {
-	color: #333;
-	background: white none;
-	border-color: #659EC9 #70AEDD #A8CFEC;
-	outline: 0;
+	cursor:default;
 }
 
-a.multiSelect:after{float:right;font-size:10px;content:"\25BC";color:#000;}
+a.multiSelect:after{
+	float:right;
+	font-size:10px;
+	content:"\25BC";
+	color:#000;
+}
 
 .multiSelectOptions {
 	margin-top: -1px;
