--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -45,6 +45,53 @@ table.dataTable tbody tr {
 	margin: 0;
 }
 
+.app-alert {
+	position: fixed;
+    top: 25px;
+	z-index: 9999;
+	right: 0;
+    left: 0;
+}
+
+.app-alert .alert {
+	box-shadow: 0px 2px 10px rgba(50, 50, 50, 0.5);
+}
+
+.blink_me_5 {
+    -webkit-animation-name: blinker;
+    -webkit-animation-duration: 0.2s;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-iteration-count: 5;
+
+    -moz-animation-name: blinker;
+    -moz-animation-duration: 0.2s;
+    -moz-animation-timing-function: linear;
+    -moz-animation-iteration-count: 5;
+
+    animation-name: blinker;
+    animation-duration: 0.2s;
+    animation-timing-function: linear;
+    animation-iteration-count: 5;
+}
+
+@-moz-keyframes blinker {  
+    0% { opacity: 1.0; }
+    50% { opacity: 0.0; }
+    100% { opacity: 1.0; }
+}
+
+@-webkit-keyframes blinker {  
+    0% { opacity: 1.0; }
+    50% { opacity: 0.0; }
+    100% { opacity: 1.0; }
+}
+
+@keyframes blinker {  
+    0% { opacity: 1.0; }
+    50% { opacity: 0.0; }
+    100% { opacity: 1.0; }
+}
+
 footer {
 	margin-top: 50px;
 }
